99-archive/old-cluster/sache/ollama/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: ollama
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ollama
    app.kubernetes.io/version: 0.3.10
    helm.sh/chart: ollama-0.58.0
  name: ollama
  namespace: ollama
spec:
  ingressClassName: nginx-ingress-int
  rules:
    - host: ollama.k8s.phonkd.net
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ollama
              port:
                number: 11434
