99-archive/old-cluster/sache/ollama/ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollamaui
  namespace: ollama
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - ollamaui.k8s.phonkd.net
    secretName: ollamaui-idk
  ingressClassName: nginx-ingress-int
  rules:
    - host: ollamaui.k8s.phonkd.net
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: open-webui
              port:
                number: 80
